[package]
name = "rustacean-review"
version = "0.1.0"
authors = ["Transmissions <greenfeatherhelp@gmail.com>"]
edition = "2018"
description = "Helps you keep track of how well you know each chapter in the Rust book."
license = "MIT"
repository = "https://github.com/TransmissionsDev/rustacean-review"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris_print = "0.1.0"

[dependencies.cursive]
version = "0.13"
default-features = false
features = ["termion-backend"]