[package]
name = "svalbard"
version = "1.0.0"
authors = ["Transmissions <greenfeatherhelp@gmail.com>"]
edition = "2018"
description = "📚 Keep track of how well you know the Rust Book! 📚"
license = "MIT"
repository = "https://github.com/svalbard-library/svalbard"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris_print = "0.1.0"
serde_json = "1.0.41"
dirs = "2.0.2"
serde = { version = "1.0", features = ["derive"] }

[dependencies.cursive]
version = "0.13"
default-features = false
features = ["termion-backend"]